--- a/about.html
+++ b/about.html
@@ -249,9 +249,9 @@
 <main>
   <section class="intro">
   <h1>Why We Coach</h1>
-  <p>Our mission is simple: to help students gain clarity, confidence, and control in their academic journey.</p>
-  <p>Through personalized coaching and research support, we aim to demystify the academic process—empowering each student to write with purpose, defend with strength, and grow with integrity.</p>
-  <p>At BomFreelanceLab, academic success isn’t just about finishing a paper—it’s about building the mindset, structure, and skills to thrive long after the assignment is done.</p>
+  <p>Our mission is simple: To help students gain clarity, confidence, and control in their academic journey.</p>
+  <p>Through personalized coaching and research support, we aim to demystify the academic process by empowering each student to write with purpose, defend with strength, and grow with integrity.</p>
+  <p>At BomFreelanceLab, academic success isn’t just about finishing a paper. Rather, it’s about building the mindset, structure, and skills to thrive long after the assignment is done.</p>
 </section>
 
   <section class="values">
