--- a/Contact.html
+++ b/Contact.html
@@ -152,6 +152,30 @@
       text-decoration: none;
     }
 
+    /* Social Media icons style scoped to contact page only */
+    .contact-info p.social-icons a {
+      margin-right: 1rem;
+      font-size: 1.8rem;
+      color: #4f46e5;
+      vertical-align: middle;
+      text-decoration: none;
+    }
+    .contact-info p.social-icons a:hover {
+      color: #3730a3;
+    }
+    .contact-info p.social-icons .material-icons.facebook {
+      font-size: 24px;
+      vertical-align: middle;
+    }
+    .contact-info p.social-icons .material-icons.telegram {
+      font-size: 24px;
+      vertical-align: middle;
+    }
+    .contact-info p.social-icons .material-icons.x {
+      font-size: 24px;
+      vertical-align: middle;
+    }
+
     .contact-form {
       background: #ffffff;
       padding: 2rem;
@@ -297,16 +321,21 @@
     <div class="contact-info">
       <h2>Contact Information</h2>
       <p><span class="material-icons">email</span> <a href="mailto:bomfreelancelab@gmail.com">bomfreelancelab@gmail.com</a></p>
-      <p><span class="material-icons">phone</span> <a href="tel:+254717357947">+254 717 357 947</a></p>
+      <p><span class="material-icons">phone</span> <a href="tel:+18212005669">+1 821 200 5669</a></p>
       <p><span class="material-icons">chat</span> <a href="https://wa.me/717357947" target="_blank" rel="noopener noreferrer">Chat on WhatsApp</a></p>
-      <p><span class="material-icons">location_on</span> United States (Remote Services)</p>
+      <p><span class="material-icons">location_on</span> Remote Services</p>
+
       <h2 style="margin-top:2rem;">Social Media</h2>
-      <p>
-        <a href="#" aria-label="Facebook"><span class="material-icons">facebook</span></a>
-        <a href="#" aria-label="Instagram"><span class="material-icons">photo_camera</span></a>
-        <a href="#" aria-label="X / Twitter"><span class="material-icons">alternate_email</span></a>
-        <a href="#" aria-label="LinkedIn"><span class="material-icons">business</span></a>
-        <a href="#" aria-label="Telegram"><span class="material-icons">send</span></a>
+      <p class="social-icons" aria-label="Social media links">
+        <a href="https://www.facebook.com/share/1HaYGXVAv9/" aria-label="Facebook" target="_blank" rel="noopener noreferrer">
+          <span class="material-icons facebook">facebook</span>
+        </a>
+        <a href="https://x.com/Brian42443372?t=xmj3XO7hImocYtYKFv0HrQ&s=09" aria-label="X (Twitter)" target="_blank" rel="noopener noreferrer">
+          <span class="material-icons x">alternate_email</span>
+        </a>
+        <a href="https://t.me/smartessaycoach" aria-label="Telegram" target="_blank" rel="noopener noreferrer">
+          <span class="material-icons telegram">send</span>
+        </a>
       </p>
     </div>
 
