--- a/Index.html
+++ b/Index.html
@@ -92,26 +92,32 @@
     </section>
 
     <section class="testimonials" data-aos="fade-up">
-      <h2>What Students Say</h2>
-      <div class="carousel">
-        <button class="carousel-btn prev" aria-label="Previous testimonial" style="position:absolute;left:5px;top:50%;transform:translateY(-50%);background:#4f46e5;color:#fff;border:none;padding:8px 12px;border-radius:4px;cursor:pointer;z-index:10;">&#8592;</button>
-        <button class="carousel-btn next" aria-label="Next testimonial" style="position:absolute;right:5px;top:50%;transform:translateY(-50%);background:#4f46e5;color:#fff;border:none;padding:8px 12px;border-radius:4px;cursor:pointer;z-index:10;">&#8594;</button>
-        <div class="carousel-track" style="display:flex;transition:transform 0.4s ease-in-out;overflow:hidden;">
-          <div class="testimonial-card" style="min-width:100%;padding:1rem;">
-            <p>“I couldn’t have completed my master's thesis without Brian’s help. His insight and formatting support were invaluable.”</p>
-            <cite>– J. Morgan, MSc Graduate</cite>
-          </div>
-          <div class="testimonial-card" style="min-width:100%;padding:1rem;">
-            <p>“Brian’s coaching helped me turn a failing paper into a distinction-grade submission. His knowledge of APA style is unmatched.”</p>
-            <cite>– A. Kibet, MBA Student</cite>
-          </div>
-          <div class="testimonial-card" style="min-width:100%;padding:1rem;">
-            <p>“Thanks to Brian, I passed my dissertation defense with confidence. His step-by-step guidance made a huge difference.”</p>
-            <cite>– Sarah L., PhD Candidate</cite>
-          </div>
-        </div>
-      </div>
-    </section>
+  <h2>What Students Say</h2>
+  <div class="testimonial-card">
+    <p>"I was struggling with Turnitin constantly flagging my master's thesis for high AI content scores, even after multiple rewrites. Thanks to Brian's guidance, he helped me understand how to rephrase and properly cite sources so the originality score improved dramatically. His patience and expertise saved me from hours of frustration!"</p>
+    <cite>— Sarah L., Master's Student in Education</cite>
+  </div>
+
+  <div class="testimonial-card">
+    <p>"Brian helped me master advanced search techniques in university databases using complex Boolean logic and Google Scholar filters. He also walked me through formatting my paper precisely in APA style, which boosted my confidence and my grade. I couldn’t have done it without his expert coaching."</p>
+    <cite>— Mark R., Graduate Research Assistant</cite>
+  </div>
+
+  <div class="testimonial-card">
+    <p>"As a Philosophy in Business Administration doctoral student, I was overwhelmed with my research concept paper. Brian broke down the requirements and worked step-by-step with me to complete a polished draft that my committee loved. His deep knowledge of research methodologies was invaluable."</p>
+    <cite>— Elena M., PBA Doctoral Candidate</cite>
+  </div>
+
+  <div class="testimonial-card">
+    <p>"Conducting a comprehensive literature review felt daunting, but Brian provided clear strategies on sourcing, evaluating, and organizing articles. His insights made the process manageable and efficient. The quality of my review exceeded my expectations thanks to his support."</p>
+    <cite>— Carlos D., Undergraduate Student</cite>
+  </div>
+
+  <div class="testimonial-card">
+    <p>"Brian’s one-on-one coaching for my dissertation defense was a game-changer. He helped me anticipate tough questions, structure my responses, and build confidence. His personalized feedback made me feel fully prepared on the big day."</p>
+    <cite>— Priya S., PhD Candidate</cite>
+  </div>
+</section>
 
     <section class="faq-preview" data-aos="fade-up" style="margin-top:2rem;">
       <h2>Frequently Asked Questions</h2>
