Add blog post 2 and update blog index

--- a/blog.html
+++ b/blog.html
@@ -13,17 +13,22 @@
   </nav>
 
   <main style="padding: 2rem; max-width: 800px; margin: auto;">
-    <h1 style="text-align: center;">Academic Insights & Blog</h1>
+  <h1 style="text-align: center;">Academic Insights & Blog</h1>
 
-    <article style="margin-bottom: 2rem;">
-      <h2><a href="blog/post-1.html">Why Coaching Builds Better Writers</a></h2>
-      <p style="color: gray; font-size: 0.9rem;">Posted on July 3, 2025</p>
-      <p>Discover how academic coaching doesn’t just improve grades—it cultivates critical thinking, writing confidence, and long-term independence...</p>
-      <a href="blog/post-1.html">Read More →</a>
-    </article>
+  <article style="margin-bottom: 2rem;">
+    <h2><a href="blog/post-1.html">Why Coaching Builds Better Writers</a></h2>
+    <p style="color: gray; font-size: 0.9rem;">Posted on July 3, 2025</p>
+    <p>Discover how academic coaching doesn’t just improve grades—it cultivates critical thinking, writing confidence, and long-term independence...</p>
+    <a href="blog/post-1.html">Read More →</a>
+  </article>
 
-    <!-- Add more posts like this -->
-  </main>
+  <article style="margin-bottom: 2rem;">
+    <h2><a href="blog/post-2.html">Why Editing Matters in Academic Writing</a></h2>
+    <p style="color: gray; font-size: 0.9rem;">Posted on July 3, 2025</p>
+    <p>Editing is not just about fixing grammar. It’s about sharpening ideas, strengthening flow, and improving how you communicate complex concepts...</p>
+    <a href="blog/post-2.html">Read More →</a>
+  </article>
+</main>
 
   <footer>
     <!-- your existing footer -->
