--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
   <title>Blog – Tutor Brian</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 </head>
 <body>
   <nav>
