--- a/Index.html
+++ b/Index.html
@@ -47,6 +47,7 @@
       <li><a href="services.html"><span class="material-icons">build</span> Services</a></li>
       <li><a href="contact.html"><span class="material-icons">mail</span> Contact</a></li>
       <li><a href="faq.html"><span class="material-icons">help</span> FAQ</a></li>
+      <li><a href="blog.html"><span class="material-icons">article</span> Blog</a></li>
     </ul>
     <button class="theme-toggle" onclick="toggleTheme()"><span class="material-icons">brightness_4</span></button>
   </div>
