--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
       box-shadow: 0 3px 8px rgba(0,0,0,0.15);
       position: sticky;
       top: 0;
-      z-index: 100;
+      z-index: 1200;
     }
     .nav-container {
       max-width: 1200px;
@@ -94,6 +94,12 @@
       color: #ecf0f1;
       font-size: 28px;
       cursor: pointer;
+      z-index: 1300; /* above overlay */
+      transition: opacity 0.3s ease;
+    }
+    .menu-toggle.hidden {
+      opacity: 0;
+      pointer-events: none;
     }
 
     /* Responsive nav for mobile */
@@ -101,16 +107,17 @@
       .nav-links {
         position: fixed;
         top: 60px;
-        right: -100%;
+        right: -260px; /* Off screen */
         background: #2c3e50;
         height: calc(100vh - 60px);
-        width: 220px;
+        width: 260px;
         flex-direction: column;
         padding-top: 1rem;
         gap: 0;
         transition: right 0.3s ease;
         border-radius: 0 0 0 8px;
         box-shadow: -4px 0 15px rgba(0,0,0,0.3);
+        z-index: 1200;
       }
       .nav-links.active {
         right: 0;
@@ -124,6 +131,24 @@
       .menu-toggle {
         display: block;
       }
+    }
+
+    /* Overlay behind menu */
+    .nav-overlay {
+      position: fixed;
+      top: 60px;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0,0,0,0.4);
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.3s ease;
+      z-index: 1150;
+    }
+    .nav-overlay.active {
+      opacity: 1;
+      pointer-events: auto;
     }
 
     header.blog-header {
@@ -158,6 +183,7 @@
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
       gap: 2.5rem;
       padding: 0 1rem;
+      padding-top: 1rem; /* So content isn't hidden under sticky nav */
     }
 
     .blog-card {
@@ -285,7 +311,7 @@
 <nav class="navbar">
   <div class="nav-container">
     <div class="nav-brand">Tutor Brian</div>
-    <button class="menu-toggle" id="menu-toggle" aria-label="Toggle menu">
+    <button class="menu-toggle" id="menu-toggle" aria-label="Toggle menu" aria-expanded="false">
       <span class="material-icons">menu</span>
     </button>
     <ul class="nav-links" id="nav-links">
@@ -301,6 +327,9 @@
     </button>
   </div>
 </nav>
+
+<!-- Overlay for mobile menu -->
+<div class="nav-overlay" id="nav-overlay"></div>
 
 <header class="blog-header" data-aos="fade-up">
   <h1>Smart Academic Insights</h1>
@@ -353,11 +382,42 @@
   document.addEventListener("DOMContentLoaded", () => {
     AOS.init({ duration: 1000, once: true });
   });
-  
+
   const toggle = document.getElementById("menu-toggle");
   const navLinks = document.getElementById("nav-links");
+  const overlay = document.getElementById("nav-overlay");
+
+  function openMenu() {
+    navLinks.classList.add("active");
+    overlay.classList.add("active");
+    toggle.setAttribute("aria-expanded", "true");
+    toggle.classList.add("hidden");
+  }
+
+  function closeMenu() {
+    navLinks.classList.remove("active");
+    overlay.classList.remove("active");
+    toggle.setAttribute("aria-expanded", "false");
+    toggle.classList.remove("hidden");
+  }
+
   toggle.addEventListener("click", () => {
-    navLinks.classList.toggle("active");
+    if (navLinks.classList.contains("active")) {
+      closeMenu();
+    } else {
+      openMenu();
+    }
+  });
+
+  overlay.addEventListener("click", () => {
+    closeMenu();
+  });
+
+  // Close menu on nav link click (mobile)
+  navLinks.querySelectorAll("a").forEach(link => {
+    link.addEventListener("click", () => {
+      closeMenu();
+    });
   });
 </script>
 
