--- a/blog.html
+++ b/blog.html
@@ -94,7 +94,7 @@
       color: #ecf0f1;
       font-size: 28px;
       cursor: pointer;
-      z-index: 1300; /* above overlay */
+      z-index: 1400; /* Above overlay */
       transition: opacity 0.3s ease;
     }
     .menu-toggle.hidden {
@@ -106,27 +106,27 @@
     @media (max-width: 768px) {
       .nav-links {
         position: fixed;
-        top: 60px;
-        right: -260px; /* Off screen */
+        top: 0;
+        right: 0;
+        width: 100vw;
+        height: 100vh;
         background: #2c3e50;
-        height: calc(100vh - 60px);
-        width: 260px;
         flex-direction: column;
-        padding-top: 1rem;
-        gap: 0;
-        transition: right 0.3s ease;
-        border-radius: 0 0 0 8px;
-        box-shadow: -4px 0 15px rgba(0,0,0,0.3);
-        z-index: 1200;
+        padding-top: 3rem;
+        gap: 1rem;
+        transition: transform 0.3s ease;
+        transform: translateX(100%);
+        z-index: 1300;
+        border-radius: 0;
+        box-shadow: none;
       }
       .nav-links.active {
-        right: 0;
+        transform: translateX(0);
       }
       .nav-links li a {
-        padding: 1rem 1.25rem;
-        font-size: 1.1rem;
-        border-radius: 0;
-        border-bottom: 1px solid #39495e;
+        font-size: 1.3rem;
+        padding: 1rem 2rem;
+        border-bottom: none;
       }
       .menu-toggle {
         display: block;
@@ -136,7 +136,7 @@
     /* Overlay behind menu */
     .nav-overlay {
       position: fixed;
-      top: 60px;
+      top: 0;
       left: 0;
       right: 0;
       bottom: 0;
@@ -144,7 +144,7 @@
       opacity: 0;
       pointer-events: none;
       transition: opacity 0.3s ease;
-      z-index: 1150;
+      z-index: 1200;
     }
     .nav-overlay.active {
       opacity: 1;
@@ -311,7 +311,7 @@
 <nav class="navbar">
   <div class="nav-container">
     <div class="nav-brand">Tutor Brian</div>
-    <button class="menu-toggle" id="menu-toggle" aria-label="Toggle menu" aria-expanded="false">
+    <button class="menu-toggle" id="menu-toggle" aria-label="Open menu" aria-expanded="false">
       <span class="material-icons">menu</span>
     </button>
     <ul class="nav-links" id="nav-links">
@@ -391,14 +391,12 @@
     navLinks.classList.add("active");
     overlay.classList.add("active");
     toggle.setAttribute("aria-expanded", "true");
-    toggle.classList.add("hidden");
   }
 
   function closeMenu() {
     navLinks.classList.remove("active");
     overlay.classList.remove("active");
     toggle.setAttribute("aria-expanded", "false");
-    toggle.classList.remove("hidden");
   }
 
   toggle.addEventListener("click", () => {
